// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title align 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  text-align: left;
  color: #1e272e;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  text-align: right;
  color: #1e272e;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  text-align: center;
  color: #1e272e;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <h1
    className="c0"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c1"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c2"
    color="black"
    textDecoration="none"
  />
</div>
`;

exports[`Title nowrap 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 1.728em;
  line-height: 1.5em;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
  <h1
    className="c0"
    color="black"
    textDecoration="none"
  />
</div>
`;

exports[`Title transform 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  text-transform: uppercase;
  color: #1e272e;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  text-transform: lowercase;
  color: #1e272e;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  text-transform: capitalize;
  color: #1e272e;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  text-transform: full-width;
  color: #1e272e;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <h1
    className="c0"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c1"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c2"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c3"
    color="black"
    textDecoration="none"
  />
</div>
`;

exports[`Title with color 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #ffffff;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #f1f2f6;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #ffdd59;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #0fbcf9;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #ff3f34;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #05c46b;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #ffa801;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #001122;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: cyan;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <h1
    className="c0"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c1"
    color="white"
    textDecoration="none"
  />
  <h1
    className="c2"
    color="light"
    textDecoration="none"
  />
  <h1
    className="c3"
    color="primary"
    textDecoration="none"
  />
  <h1
    className="c4"
    color="info"
    textDecoration="none"
  />
  <h1
    className="c5"
    color="danger"
    textDecoration="none"
  />
  <h1
    className="c6"
    color="success"
    textDecoration="none"
  />
  <h1
    className="c7"
    color="warning"
    textDecoration="none"
  />
  <h1
    className="c8"
    color="#001122"
    textDecoration="none"
  />
  <h1
    className="c9"
    color="cyan"
    textDecoration="none"
  />
</div>
`;

exports[`Title with decoration 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  -webkit-text-decoration: overline;
  text-decoration: overline;
  color: #1e272e;
  text-align: left;
  text-transform: none;
}

.c1 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #1e272e;
  text-align: left;
  text-transform: none;
}

.c2 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  color: #1e272e;
  text-align: left;
  text-transform: none;
}

<div>
  <h1
    className="c0"
    color="black"
    textDecoration="overline"
  />
  <h1
    className="c1"
    color="black"
    textDecoration="underline"
  />
  <h1
    className="c2"
    color="black"
    textDecoration="line-through"
  />
</div>
`;

exports[`Title with level 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.488em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 2.074em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 1.728em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 1.44em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 1.2em;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.125;
  padding: 0;
  margin: 0 0 16px;
  color: #1e272e;
  text-align: left;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <h1
    className="c0"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c1"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c2"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c3"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c4"
    color="black"
    textDecoration="none"
  />
  <h1
    className="c5"
    color="black"
    textDecoration="none"
  />
</div>
`;
